# f1-gif-comparison

./: .gitignore  Cargo.toml  README.md
f1_fast/: driver1_telemetry.json  driver2_telemetry.json  fetch.py
src/: data_fetcher.rs  gif_generator.rs  main.rs
src/gif_generator/: drawing_utils.rs  gif_consts.rs  hud_overlay.rs  image_resize.rs  telemetry_plot.rs  track_map.rs
