[package]
name = "f1_gif_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
imageproc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ab_glyph = "0.2"